feat: Project complying with Java 17 #1 (#2)