@@ -8,8 +8,8 @@
 	<name>fele-language</name>
 
 	<properties>
-		<maven.compiler.source>19</maven.compiler.source>
-		<maven.compiler.target>19</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -33,8 +33,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>19</release> <!-- <release>13/14/15</release> -->
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>17</release>
 				</configuration>
 			</plugin>
 			<plugin>
